--- a/dist.ini
+++ b/dist.ini
@@ -14,10 +14,11 @@ version          = 0.01002
 [EOLTests]
 
 [Prereq]
-MooseX::Types = 0
-DBIx::Class   = 0
+DBIx::Class                    = 0
+MooseX::Types                  = 0
+MooseX::Types::Parameterizable = 0
 
 [Prereq / TestRequires]
 DBD::SQLite     = 0
-Test::More      = 0
 SQL::Translator = 0.11006
+Test::More      = 0
