--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name             = MooseX-Types-DBIx-Class
-author           = Oliver Charles <oliver@ocharles.org.uk>
+author           = Oliver Charles <oliver@ocharles.org.uk>, Brian Phillips
 license          = Perl_5
 copyright_holder = Oliver Charles
 copyright_year   = 2010
-version          = 0.01002
+version          = 0.02
 
 [@Basic]
 [@Git]
