--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
 name             = MooseX-Types-DBIx-Class
-author           = Oliver Charles <oliver@ocharles.org.uk>, Brian Phillips
+author           = Oliver Charles <oliver@ocharles.org.uk>
+author           = Brian Phillips <bphillips@cpan.org>
 license          = Perl_5
 copyright_holder = Oliver Charles
 copyright_year   = 2010
