prep for release

--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,9 @@ name             = MooseX-Types-DBIx-Class
 author           = Oliver Charles <oliver@ocharles.org.uk>
 author           = Brian Phillips <bphillips@cpan.org>
 license          = Perl_5
-copyright_holder = Oliver Charles
-copyright_year   = 2010
-version          = 0.04
+copyright_holder = Brian Phillips
+copyright_year   = 2011
+version          = 0.05
 
 [@Basic]
 [@Git]
@@ -18,7 +18,7 @@ version          = 0.04
 [Prereq]
 DBIx::Class                    = 0
 MooseX::Types                  = 0
-MooseX::Types::Parameterizable = 0
+MooseX::Types::Parameterizable = 0.07
 
 [Prereq / TestRequires]
 DBD::SQLite     = 0
