--- a/dist.ini
+++ b/dist.ini
@@ -15,12 +15,12 @@ version          = 0.05
 [NoTabsTests]
 [EOLTests]
 
-[Prereq]
+[Prereqs]
 DBIx::Class                    = 0
 MooseX::Types                  = 0
 MooseX::Types::Parameterizable = 0.07
 
-[Prereq / TestRequires]
+[Prereqs / TestRequires]
 DBD::SQLite     = 0
 SQL::Translator = 0.11006
 Test::More      = 0
